fixed self inter. links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,10 +34,10 @@
 		</span>
 		<span class="alignright">
   			<span><a href="/" title="首页" rev="bootmark"><i class="icon-home"></i>首页</a></span>
-  			<span><a href="/archives.html" rev="bootmark">归档</a></span>
-  			<span><a href="/categories.html" rev="bootmark">分类</a></span>
-  			<span><a href="/tags.html" rev="bootmark">标签</a></span>
-  			<span><a href="/about.html" rev="bootmark">关于</a></span>   
+  			<span><a href="/archives/" rev="bootmark">归档</a></span>
+  			<span><a href="/categories/" rev="bootmark">分类</a></span>
+  			<span><a href="/tags/" rev="bootmark">标签</a></span>
+  			<span><a href="/about/" rev="bootmark">关于</a></span>   
 			<span><a href="/atom.xml" rev="bookmark">RSS</a></span>
 		</span>
 		</section>
@@ -66,7 +66,7 @@
        		<a href="/" title="{{ site.title }}"><i class="icon-home"></i>首页</a> &brvbar; 
       	 	<a href="/atom.xml"><i class="icon-rss"></i>RSS</a> 
     		</span>
-    		<span class="alignright"> &copy <a href="/about.html">DevRel.info</a>
+    		<span class="alignright"> &copy <a href="/about/">DevRel.info</a>
                 | Theme by <a href="http://shawhu.org/about.html">signifox</a>
                 | Powered by 
                 <a href="https://github.com">github</a>
