fixed theme + UPYUN support

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,6 +68,12 @@
     		</span>
     		<span class="alignright"> &copy <a href="/about/">DevRel.info</a>
                 | Theme by <a href="http://shawhu.org/about.html">signifox</a>
+                已由
+        <a href="http://qiniu.com/">
+        <img src="http://docs.upyun.com/img/upyun_logo.png">
+        </a>
+    提供CDN及云存储服务
+
                 | Powered by 
                 <a href="https://github.com">github</a>
                 ;<a href="http://git-scm.com/">git</a>
