up(->101.camp) ++ utterances plugin

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 		<span class="alignleft">
   			<img class="violet-logo" src="/static/images/logo.png"/>
 			<hgroup class="violet-site">	
-        		<h1><a href="/" ret="bootmark">DevRel</a><span>.info</span></h1>
+        		<h1><a href="/" ret="bootmark">DevRel</a><span>.101.camp</span></h1>
         		<h2>too simple, sometimes naïve.</h2>
      		</hgroup><!-- //violet-site -->	
 		</span>
@@ -83,11 +83,12 @@
 {% include icp.md %}
 
             </span>
-<!-- 将此标记放置在您希望显示徽章的位置。 -->
+<!-- 将此标记放置在您希望显示徽章的位置。 
 <div class="g-plus" data-height="69" data-href="//plus.google.com/117158502155411796931" data-rel="publisher"></div>
 
-<!-- 将此标记放置在最后一个 徽章 标记之后。 -->
+-->
 
+<!-- 将此标记放置在最后一个 徽章 标记之后。 
 <script type="text/javascript">
   window.___gcfg = {lang: 'zh-CN'};
 
@@ -97,6 +98,9 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
   })();
 </script>
+
+-->
+
 
 		</div>
 		</footer>
@@ -108,8 +112,10 @@
 		<script src="/static/js/jquery.scrollTo.js" type="text/javascript"></script>
 		<script src="/static/js/Lost.js" type="text/javascript"></script>
 
-<!-- FOR v2.ta.qq.com -->
+<!-- FOR v2.ta.qq.com 
 <script type="text/javascript" src="http://tajs.qq.com/stats?sId=30566700" charset="UTF-8"></script>
+
+-->
 
 	</body>
 </html>
