--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,8 +45,7 @@ layout: page
       {% endif %}
 </section>
 <hr/>
-
-{% include jiahis.md %}
+{% include utterances.md %}
 
 <br/>
-{% include comments.md %}
+{% include jiahis.md %}
