up(cfg) - google search

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,8 @@
 
 		<footer class="lost-footer">
 		<div>
-<!-- Custom Search -->
+<!-- Custom Search 
+
 <script>
   (function() {
     var cx = '011275554785324936933:wpdxfi4urwc';
@@ -60,6 +61,8 @@
   })();
 </script>
 <gcse:search></gcse:search>
+
+-->
 
     		<hr/>
     		<span class="alignleft">
