👌 IMPROVE: fix upyun link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,17 +71,20 @@
     		</span>
     		<span class="alignright"> &copy <a href="/about/">DevRel.info</a>
                 | Theme by <a href="http://shawhu.org/about.html">signifox</a>
-                已由
-        <a href="http://qiniu.com/">
-        <img src="http://docs.upyun.com/img/upyun_logo.png">
-        </a>
-    提供CDN及云存储服务
 
                 | Powered by 
                 <a href="https://github.com">github</a>
                 ;<a href="http://git-scm.com/">git</a>
                 ;<a href="http://daringfireball.net/projects/markdown/">Md</a>
                 ;<a href="https://github.com/mojombo/jekyll">Jekyll </a>
+<br/>
+已由
+        <a href="http://www.upyun.com/">
+        <img src="http://docs.upyun.com/img/upyun_logo.png">
+        </a>
+    提供CDN及云存储服务
+
+
 <br/>
 {% include icp.md %}
 
