👌 IMPROVE: fix gh link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
                 | Theme by <a href="http://shawhu.org/about.html">signifox</a>
 
                 | Powered by 
-                <a href="https://github.com">github</a>
+                <a href="https://github.com/DevRela/devrela.github.io/">github</a>
                 ;<a href="http://git-scm.com/">git</a>
                 ;<a href="http://daringfireball.net/projects/markdown/">Md</a>
                 ;<a href="https://github.com/mojombo/jekyll">Jekyll </a>
