--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -72,5 +72,8 @@ $(document).ready(function(){
 <hr/>
 {% include utterances.md %}
 
+<hr/>
+{% include announce.html %}
+
 <br/>
 {% include jiahis.md %}
